package com.company;

public class Account {
    private int balance;
    public int getBalance() {
        return 0;
    }

    public void setBalance(int value) {

    }
}
