package com.company;

public interface IAccount {
    int getBalance();
    void setBalance(int value);
}