package com.company;

public class Transaction {
    public Action[] actions;
    String dateTime;
}
