package com.company;

public class TransactionLogger {
    private Transaction[] history;
    public void log(Transaction t){

    }
    public Transaction[] getHistory(String accountId){
        return null;
    }
}
