package com.company;

public class User {
    String name;
    String id;
    String password;
    Rule[] rules;
}
