@startuml

title __ÏÏÂÈÑ_2's Class Diagram__\n

  namespace com.company {
    class com.company.Account {
    }
  }
  

  namespace com.company {
    class com.company.Action {
    }
  }
  

  namespace com.company {
    enum ActionType {
    }
  }
  

  namespace com.company {
    class com.company.BudgetManager {
    }
  }
  

  namespace com.company {
    interface com.company.IAccount {
    }
  }
  

  namespace com.company {
    interface com.company.IBudgetManager {
    }
  }
  

  namespace com.company {
    interface com.company.ITransactionManager {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    class com.company.Navigator {
    }
  }
  

  namespace com.company {
    enum Route {
    }
  }
  

  namespace com.company {
    enum Rule {
    }
  }
  

  namespace com.company {
    class com.company.Transaction {
    }
  }
  

  namespace com.company {
    class com.company.TransactionLogger {
    }
  }
  

  namespace com.company {
    class com.company.TransactionManager {
    }
  }
  

  namespace com.company {
    class com.company.TransactionResult {
    }
  }
  

  namespace com.company {
    class com.company.User {
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.BaseHomeScreen {
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.BudgetOperationsScreen {
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.HistoryScreen {
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.LoginScreen {
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.OperationScreen {
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.RegistrationScreen {
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.RulesScreen {
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.Screen {
      }
    }
  }
  

  com.company.Action o-- com.company.ActionType : type
  com.company.BudgetManager .up.|> com.company.IBudgetManager
  com.company.Navigator o-- com.company.screens.BudgetOperationsScreen : budgetOperationsScreen
  com.company.Navigator o-- com.company.screens.HistoryScreen : historyScreen
  com.company.Navigator o-- com.company.screens.LoginScreen : loginScreen
  com.company.Navigator o-- com.company.screens.OperationScreen : operationScreen
  com.company.Navigator o-- com.company.screens.RegistrationScreen : registrationScreen
  com.company.Navigator o-- com.company.screens.RulesScreen : rulesScreen
  com.company.screens.BaseHomeScreen -up-|> com.company.screens.Screen
  com.company.screens.BudgetOperationsScreen -up-|> com.company.screens.BaseHomeScreen
  com.company.screens.HistoryScreen -up-|> com.company.screens.BaseHomeScreen
  com.company.screens.LoginScreen -up-|> com.company.screens.Screen
  com.company.screens.OperationScreen -up-|> com.company.screens.BaseHomeScreen
  com.company.screens.RegistrationScreen -up-|> com.company.screens.Screen
  com.company.screens.RulesScreen -up-|> com.company.screens.BaseHomeScreen
  com.company.screens.Screen -up-|> javax.swing.JPanel
  com.company.screens.Screen o-- com.company.IBudgetManager : budgetManager
  com.company.screens.Screen o-- com.company.Navigator : navigator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
